--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,11 @@ h1 {
   color: #fff;
 }
 
+h5 {
+  margin-bottom: 20px;
+  color: #fff;
+}
+
 .social-links a {
   color: #fff;
   text-decoration: none;
