--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,12 @@ h1 {
   color: #fff;
 }
 
+h2 {
+  font-size: 2.5rem;
+  margin-bottom: 20px;
+  color: #fff;
+}
+
 h5 {
   margin-bottom: 20px;
   color: #fff;
