--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   text-align: center;
 }
 
+img {
+  width: 500px;
+  height: 500px;
+  object-fit: contain;
+  margin: 0 auto;
+}
+
+
 .container {
   background-color: #000;
   padding: 30px;
